feat(global): add log in view, as well as formating outputs from te json